--- a/controller/src/main/resources/application.properties
+++ b/controller/src/main/resources/application.properties
@@ -8,9 +8,9 @@ spring.jackson.default-property-inclusion=non_null
 spring.http.multipart.maxFileSize=100Mb
 spring.http.multipart.maxRequestSize=100Mb
 
-#启用shutdown
+#\u542F\u7528shutdown
 endpoints.shutdown.enabled=true
-#禁用密码验证
+#\u7981\u7528\u5BC6\u7801\u9A8C\u8BC1
 endpoints.shutdown.sensitive=false
 
 server.tomcat.basedir= D:/Tomcat
