--- a/controller/pom.xml
+++ b/controller/pom.xml
@@ -44,11 +44,11 @@
                     <target>1.8</target>
                 </configuration>
             </plugin>
-            <!--             <plugin>
+                         <plugin>
                            <groupId>org.springframework.boot</groupId>
                             <artifactId>spring-boot-maven-plugin</artifactId>
                             <configuration>
-                                <mainClass>njust.web.</mainClass>
+                                <mainClass>njust.web.LittleMatApplication</mainClass>
                                 <executable>true</executable>
                             </configuration>
                             <executions>
@@ -56,15 +56,14 @@
                                     <goals>
                                         <goal>repackage</goal>
                                     </goals>
-                                    -->
                         <!--可以把依赖的包都打包到生成的Jar包中-->
                         <!-- 新增注释部分是主函数的配置 -->
                         <!--<configuration>-->
                         <!--<classifier>exec</classifier>-->
                         <!--</configuration>-->
-                <!--                     </execution>
+                                     </execution>
                                </executions>
-                           </plugin>-->
+                           </plugin>
         </plugins>
     </build>
 
