修改为可部署配置

--- a/controller/src/main/resources/application.yml
+++ b/controller/src/main/resources/application.yml
@@ -1,8 +1,3 @@
-logging:
-  level:
-    org.springframework:
-      data: DEBUG
-      security: DEBUG
 spring:
-  session:
-    store-type: none
+  profiles:
+    active: prod
