--- a/controller/src/main/resources/application-prod.yml
+++ b/controller/src/main/resources/application-prod.yml
@@ -40,7 +40,7 @@ spring:
     username: root
     password: 15298382837LIUxia_
     type: com.mchange.v2.c3p0.ComboPooledDataSource
-    url: jdbc:mysql://mysql:3306/little_mat?setUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
+    url: jdbc:mysql://lmmysql:3306/little_mat?setUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=convertToNull&useSSL=false&autoReconnect=true&failOverReadOnly=false
     testOnBorrow: true
     testWhileIdle: true
     timeBetweenEvictionRunsMillis: 3600000
